Tag branches/1.3 r2949 as tags/1.3.12