@@ -12,6 +12,7 @@ import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import com.mallardsoft.tuple.*;
 
 import gov.fnal.elab.Elab;
 import gov.fnal.elab.ElabGroup;
@@ -39,11 +40,10 @@ public class DatabaseSurveyProvider implements ElabSurveyProvider, ElabProvider 
 
 	public ElabSurveyQuestion getSurveyQuestion(int surveyId, int questionId, int responseId) throws ElabException {
 		Connection con = null; 
-		PreparedStatement queryQuestion = null;
 		ElabSurveyQuestion esq = null; 
 		try { 
 			con = DatabaseConnectionManager.getConnection(elab.getProperties());
-			queryQuestion = con.prepareStatement(
+			PreparedStatement queryQuestion = con.prepareStatement(
 					"SELECT q.id AS \"question_id\", m.question_no, q.question_text, q.answer_id, r.response_no, r.id, r.response_text " +
 					"FROM \"newSurvey\".questions AS q " +
 					"LEFT OUTER JOIN \"newSurvey\".responses AS r ON r.question_id = q.id " +
@@ -88,7 +88,7 @@ public class DatabaseSurveyProvider implements ElabSurveyProvider, ElabProvider 
 			throw new ElabException(e);
 		}
 		finally {
-			DatabaseConnectionManager.close(con, queryQuestion);
+			DatabaseConnectionManager.close(con);
 		}
 		
 		return esq;
@@ -97,30 +97,29 @@ public class DatabaseSurveyProvider implements ElabSurveyProvider, ElabProvider 
 	
 	public ElabSurvey getSurvey(int surveyId) throws ElabException {
 		synchronized (this.tests) {
-            if (this.tests.containsKey(Integer.valueOf(surveyId))) {
-                return this.tests.get(Integer.valueOf(surveyId));
+            if (this.tests.containsKey(new Integer(surveyId))) {
+                return this.tests.get(new Integer(surveyId));
             }
         }		
 		
 		ElabSurvey survey = null;
 		Connection con = null; 
-		PreparedStatement ps = null, querySurvey = null;
 		try {
 			con = DatabaseConnectionManager.getConnection(this.elab.getProperties());
-			querySurvey = con.prepareStatement(
+			PreparedStatement querySurvey = con.prepareStatement(
 					"SELECT * FROM \"newSurvey\".tests WHERE id = ?;");
 			querySurvey.setInt(1, surveyId);
 			ResultSet rs1 = querySurvey.executeQuery();
 			if (rs1.next()) {
 				survey = new ElabSurvey(rs1.getString("description"), rs1.getInt("id"));
 				
-				ps = con.prepareStatement(
-					"SELECT q.id AS \"question_id\", m.question_no, q.question_text, q.answer_id, r.response_no, r.id, r.response_text " +
-					"FROM \"newSurvey\".questions AS q " + 
-					"LEFT OUTER JOIN \"newSurvey\".responses AS r ON (q.id = r.question_id) " +
-					"LEFT OUTER JOIN \"newSurvey\".map_questions_tests AS m ON (q.id = m.question_id) " +
-					"WHERE m.test_id = ? " +
-					"ORDER BY m.question_no ASC, r.response_no ASC;");
+				PreparedStatement ps = con.prepareStatement(
+						"SELECT q.id AS \"question_id\", m.question_no, q.question_text, q.answer_id, r.response_no, r.id, r.response_text " +
+						"FROM \"newSurvey\".questions AS q " + 
+						"LEFT OUTER JOIN \"newSurvey\".responses AS r ON (q.id = r.question_id) " +
+						"LEFT OUTER JOIN \"newSurvey\".map_questions_tests AS m ON (q.id = m.question_id) " +
+						"WHERE m.test_id = ? " +
+						"ORDER BY m.question_no ASC, r.response_no ASC;");
 						
 				ps.setInt(1, surveyId);
 				ResultSet rs = ps.executeQuery();
@@ -163,11 +162,11 @@ public class DatabaseSurveyProvider implements ElabSurveyProvider, ElabProvider 
 			throw new ElabException(e);
 		}
 		finally {
-			DatabaseConnectionManager.close(con, ps, querySurvey);
+			DatabaseConnectionManager.close(con);
 		}
 		
 		synchronized(this.tests) {
-			this.tests.put(Integer.valueOf(surveyId), survey);
+			this.tests.put(new Integer(surveyId), survey);
 		}
 		
 		return survey; 
@@ -180,10 +179,8 @@ public class DatabaseSurveyProvider implements ElabSurveyProvider, ElabProvider 
 		
 		Savepoint svpt = null; 
 		Connection con = null;
-		PreparedStatement insertCompletion = null, insertAnswer = null;
 		
 		try {
-			int completionId; 
 			ResultSet rs = null; 
 			con = DatabaseConnectionManager.getConnection(elab.getProperties());
 			
@@ -192,25 +189,18 @@ public class DatabaseSurveyProvider implements ElabSurveyProvider, ElabProvider 
 			svpt = con.setSavepoint();
 			
 			// TODO: Insert a new completion for the student
-			// Need student ID, test ID, time, type, return the new id
-			insertCompletion = con.prepareStatement(
+			// Need student ID, test ID, time, type
+			PreparedStatement insertCompletion = con.prepareStatement(
 					"INSERT INTO \"newSurvey\".completions " +
 					"(test_id, time, student_id, type) " +
-					"VALUES (?, ?, ?, ?) RETURNING id;");
+					"VALUES (?, ?, ?, ?);");
 			insertCompletion.setInt(1, surveyId);
 			insertCompletion.setTimestamp(2, ts); 
 			insertCompletion.setInt(3, studentId);
 			insertCompletion.setString(4, type);
-			rs = insertCompletion.executeQuery();
+			insertCompletion.executeUpdate(); 
 			
-			if (rs.next()) {
-				completionId = rs.getInt(1);
-			}
-			else { 
-				throw new SQLException("No data back from the prepared statement");
-			}
-			
-			/* DONE: Get lastval() for for the generated completion ID 
+			// TODO: Get lastval() for for the generated completion ID 
 			int completionId = -1;
 			PreparedStatement queryCompletionId = con.prepareStatement("SELECT lastval(); ");
 			rs = queryCompletionId.executeQuery(); 
@@ -219,20 +209,19 @@ public class DatabaseSurveyProvider implements ElabSurveyProvider, ElabProvider 
 			}
 			else {
 				throw new SQLException("No data back from the prepared statement");
-			} */
+			}
 			
-			// DONE: Insert all the answers
+			// TODO: Insert all the answers
 			// Need response ID, completion ID; 
-			insertAnswer = con.prepareStatement(
-				"INSERT INTO \"newSurvey\".answers " +
-				"(response_id, completion_id) " +
-				"VALUES (?, ?); ");
 			for (Integer answer : answers) {
+				PreparedStatement insertAnswer = con.prepareStatement(
+						"INSERT INTO \"newSurvey\".answers " +
+						"(response_id, completion_id) " +
+						"VALUES (?, ?); ");
 				insertAnswer.setInt(1, answer.intValue());
 				insertAnswer.setInt(2, completionId);
-				insertAnswer.addBatch();
+				insertAnswer.executeUpdate();
 			}
-			insertAnswer.executeBatch();
 			
 			// Commit the transaction. 
 			con.commit();
@@ -249,12 +238,12 @@ public class DatabaseSurveyProvider implements ElabSurveyProvider, ElabProvider 
 				throw new ElabException(ex);
 			}
 			finally {
-				DatabaseConnectionManager.close(con, insertCompletion, insertAnswer);
+				DatabaseConnectionManager.close(con);
 			}
 			throw new ElabException(e);
 		}
 		finally {
-			DatabaseConnectionManager.close(con, insertCompletion, insertAnswer);
+			DatabaseConnectionManager.close(con);
 		}
 	}
 	
@@ -263,12 +252,11 @@ public class DatabaseSurveyProvider implements ElabSurveyProvider, ElabProvider 
 		
 		boolean taken = false; 
 		Connection con = null;
-		PreparedStatement ps = null;
 		
 		try {
 			con = DatabaseConnectionManager.getConnection(elab.getProperties()); 
 			
-			ps = con.prepareStatement(
+			PreparedStatement ps = con.prepareStatement(
 					"SELECT id FROM \"newSurvey\".completions " +
 					"WHERE student_id = ? AND test_id = ? AND type = ?;");
 			ps.setInt(1, studentId);
@@ -285,7 +273,7 @@ public class DatabaseSurveyProvider implements ElabSurveyProvider, ElabProvider 
 			throw new ElabException(e); 
 		}
 		finally {
-			DatabaseConnectionManager.close(con, ps);
+			DatabaseConnectionManager.close(con);
 		}
 		
 		return taken; 
@@ -293,18 +281,17 @@ public class DatabaseSurveyProvider implements ElabSurveyProvider, ElabProvider 
 	
 	public int getTotalStudents(ElabGroup group) throws ElabException {
 		Connection con = null; 
-		PreparedStatement ps = null;
 		int total = -1; 
 		try { 
 			con = DatabaseConnectionManager.getConnection(elab.getProperties());
-			ps = con.prepareStatement(
-				"SELECT COUNT(rg.id) " +
-				"FROM research_group AS rg " +
-				"LEFT OUTER JOIN research_group_student AS rgs ON rg.id = rgs.research_group_id " +
-				"LEFT OUTER JOIN research_group_project AS rgp ON rg.id = rgp.research_group_id " +
-				"WHERE rg.id = ? AND rgp.project_id = ?;");
-			ps.setInt(1, group.getId());
-			ps.setInt(2, elab.getId());
+			PreparedStatement ps = con.prepareStatement(
+					"SELECT COUNT(rg.id) " +
+					"FROM research_group AS rg " +
+					"LEFT OUTER JOIN research_group_student AS rgs ON rg.id = rgs.research_group_id " +
+					"LEFT OUTER JOIN research_group_project AS rgp ON rg.id = rgp.research_group_id " +
+					"WHERE rg.id = ? AND rgp.project_id = ?;");
+			ps.setInt(1, Integer.parseInt(group.getId()));
+			ps.setInt(2, Integer.parseInt(elab.getId()));
 			
 			ResultSet rs = ps.executeQuery();
 			if (rs.next()) {
@@ -318,30 +305,29 @@ public class DatabaseSurveyProvider implements ElabSurveyProvider, ElabProvider 
 			throw new ElabException(e);
 		}
 		finally {
-			DatabaseConnectionManager.close(con, ps);
+			DatabaseConnectionManager.close(con);
 		}
 		return total;
 	}
 
 	public int getTotalTaken(String type, ElabGroup group) throws ElabException {
 		Connection con = null;
-		PreparedStatement ps = null;
 		int surveyId = group.getNewSurveyId().intValue();
 		int total = -1; 
 		try {
 			con = DatabaseConnectionManager.getConnection(elab.getProperties());			
-			ps = con.prepareStatement(
-				"SELECT COUNT(student_id) " +
-				"FROM \"newSurvey\".completions " +
-				"WHERE test_id = ? AND type = ? AND student_id IN " +
-				"(SELECT student.id FROM student, research_group_student, research_group_project " +
-					"WHERE research_group_student.research_group_id = ? " +
-					"AND research_group_project.research_group_id = ? " +
-					"AND research_group_student.student_id = student.id); "); 
+			PreparedStatement ps = con.prepareStatement(
+					"SELECT COUNT(student_id) " +
+					"FROM \"newSurvey\".completions " +
+					"WHERE test_id = ? AND type = ? AND student_id IN " +
+					"(SELECT student.id FROM student, research_group_student, research_group_project " +
+						"WHERE research_group_student.research_group_id = ? " +
+						"AND research_group_project.research_group_id = ? " +
+						"AND research_group_student.student_id = student.id); "); 
 			ps.setInt(1, surveyId);
 			ps.setString(2, type);
-			ps.setInt(3, group.getId());
-			ps.setInt(4, group.getId());
+			ps.setInt(3, Integer.parseInt(group.getId()));
+			ps.setInt(4, Integer.parseInt(group.getId()));
 						
 			ResultSet rs = ps.executeQuery(); 
 			if (rs.next()) {
@@ -356,7 +342,7 @@ public class DatabaseSurveyProvider implements ElabSurveyProvider, ElabProvider 
 			throw new ElabException(e);
 		}
 		finally {
-			DatabaseConnectionManager.close(con, ps);
+			DatabaseConnectionManager.close(con);
 		}
 		
 		return total; 
@@ -365,21 +351,21 @@ public class DatabaseSurveyProvider implements ElabSurveyProvider, ElabProvider 
 
 	public Map<ElabStudent, Boolean> getStudentSurveyStatus(String type, ElabGroup group) throws ElabException {
 		Connection con = null; 
-		PreparedStatement ps = null;
 		Map<ElabStudent, Boolean> status = null;
 		int surveyId;
 		if (group.getNewSurveyId() != null) {
 			surveyId = group.getNewSurveyId().intValue();
 			try {
-				con = DatabaseConnectionManager.getConnection(elab.getProperties());		
-				ps = con.prepareStatement(
-						"SELECT id FROM \"newSurvey\".completions " +
-						"WHERE student_id = ? AND test_id = ? AND type = ?; ");
-				
+				con = DatabaseConnectionManager.getConnection(elab.getProperties());			
 				ResultSet rs = null; 
 				status = new HashMap<ElabStudent, Boolean>(); 
-				for (ElabStudent student : group.getStudents()) {
-					ps.setInt(1, student.getId());
+
+				for (Iterator<ElabStudent> i = group.getStudents().iterator(); i.hasNext(); ) {
+					ElabStudent student = i.next();
+					PreparedStatement ps = con.prepareStatement(
+							"SELECT id FROM \"newSurvey\".completions " +
+							"WHERE student_id = ? AND test_id = ? AND type = ?; ");
+					ps.setInt(1, Integer.parseInt(student.getId()));
 					ps.setInt(2, surveyId);
 					ps.setString(3, type);
 					
@@ -391,12 +377,13 @@ public class DatabaseSurveyProvider implements ElabSurveyProvider, ElabProvider 
 						status.put(student, Boolean.valueOf(false));
 					}
 				}
+				 
 			}
 			catch (Exception e) {
 				throw new ElabException(e);
 			}
 			finally {
-				DatabaseConnectionManager.close(con, ps);
+				DatabaseConnectionManager.close(con);
 			}
 		}
 		return status;
@@ -404,20 +391,12 @@ public class DatabaseSurveyProvider implements ElabSurveyProvider, ElabProvider 
 	
 	public Map<ElabGroup, Map<ElabStudent, List<ElabSurveyQuestion>>> getStudentResultsForTeacher(String type, ElabGroup group) throws ElabException {
 		Connection con = null;
-		PreparedStatement ps = null;
 		Map<ElabStudent, List<ElabSurveyQuestion>> thisGroup = null; 
+				
 		Map<ElabGroup, Map<ElabStudent, List<ElabSurveyQuestion>>> results = null; 
 		
 		try {
 			con = DatabaseConnectionManager.getConnection(elab.getProperties());
-			ps = con.prepareStatement(
-					"SELECT a.response_id AS \"ans_ptr\",  c.time " +
-					"FROM \"newSurvey\".answers AS a " +
-					"LEFT OUTER JOIN \"newSurvey\".responses AS r ON (a.response_id = r.id) " +
-					"LEFT OUTER JOIN \"newSurvey\".questions AS q ON (r.question_id = q.id) " +
-					"LEFT OUTER JOIN \"newSurvey\".completions AS c ON (c.id = a.completion_id) " +
-					"LEFT OUTER JOIN \"newSurvey\".map_questions_tests AS m on (q.id = m.question_id) " +
-					"WHERE c.student_id = ? AND c.type = ? AND q.id = ? ");
 			results = new HashMap(); 
 			for (Iterator<ElabGroup> g = group.getGroups().iterator(); g.hasNext(); ) {
 				ElabGroup eg = g.next();
@@ -426,12 +405,21 @@ public class DatabaseSurveyProvider implements ElabSurveyProvider, ElabProvider 
 				}
 				ElabSurvey survey = this.getSurvey(eg.getNewSurveyId().intValue());
 				thisGroup = new HashMap(); 
-				for (ElabStudent es : eg.getStudents()) { 
-					List<ElabSurveyQuestion> questions = new ArrayList<ElabSurveyQuestion>();
-					for (ElabSurveyQuestion q : survey.getQuestionsById()) {
-						ElabSurveyQuestion question = q.clone();
-						ps.clearParameters();
-						ps.setInt(1, es.getId());
+				for (Iterator<ElabStudent> s = eg.getStudents().iterator(); s.hasNext(); ) {
+					ElabStudent es = s.next();
+					List<ElabSurveyQuestion> questions = new ArrayList<ElabSurveyQuestion>(); 
+					for (Iterator<ElabSurveyQuestion> q = survey.getQuestionsById().iterator(); q.hasNext(); ) {
+						ElabSurveyQuestion question = (ElabSurveyQuestion) q.next().clone();
+						PreparedStatement ps = con.prepareStatement(
+								"SELECT a.response_id AS \"ans_ptr\",  c.time " +
+								"FROM \"newSurvey\".answers AS a " +
+								"LEFT OUTER JOIN \"newSurvey\".responses AS r ON (a.response_id = r.id) " +
+								"LEFT OUTER JOIN \"newSurvey\".questions AS q ON (r.question_id = q.id) " +
+								"LEFT OUTER JOIN \"newSurvey\".completions AS c ON (c.id = a.completion_id) " +
+								"LEFT OUTER JOIN \"newSurvey\".map_questions_tests AS m on (q.id = m.question_id) " +
+								"WHERE c.student_id = ? AND c.type = ? AND q.id = ? "
+								);
+						ps.setInt(1, Integer.parseInt(es.getId()));
 						ps.setString(2, type);
 						ps.setInt(3, question.getId());
 						
@@ -456,35 +444,10 @@ public class DatabaseSurveyProvider implements ElabSurveyProvider, ElabProvider 
 			throw new ElabException(e);
 		}
 		finally {
-			DatabaseConnectionManager.close(con, ps);
+			DatabaseConnectionManager.close(con);
 		}
 	
 		return results; 
 	}
 
-	public Map<Integer, String> getElabSurveyListForProject(int projectId) throws ElabException {
-		Connection con = null;
-		PreparedStatement ps = null;
-		Map<Integer, String> surveys = new java.util.TreeMap(); 
-		
-		try { 
-			con = DatabaseConnectionManager.getConnection(elab.getProperties());
-			ps = con.prepareStatement(
-					"SELECT * FROM \"newSurvey\".tests WHERE proj_id = ?;");
-			ps.setInt(1, projectId);
-			ResultSet rs = ps.executeQuery(); 
-			while (rs.next()) {
-				// Construct description string 
-				String val = rs.getString("description") + " for " + rs.getString("timeframe_description");
-				surveys.put(rs.getInt("id"), val);
-			}
-		}
-		catch (Exception e) {
-			throw new ElabException(e);
-		}
-		finally {
-			DatabaseConnectionManager.close(con, ps);
-		}
-		return surveys; 
-	}
 }
